--- a/CinemaPrototype2/CinemaPrototype2.csproj
+++ b/CinemaPrototype2/CinemaPrototype2.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.43.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
